Tests now working in maven and intellij with Java17