@@ -69,13 +69,14 @@
         <configuration>
           <argLine>
             -Ddk.netarkivet.settings.file=tests/dk/netarkivet/test-settings.xml
+            --add-opens=java.base/java.lang=ALL-UNNAMED
+            --add-opens=java.base/java.util=ALL-UNNAMED
           </argLine>
         </configuration>
       </plugin>
      <plugin>
     <groupId>org.jacoco</groupId>
     <artifactId>jacoco-maven-plugin</artifactId>
-    <version>${jacoco.version}</version>
     <configuration>
         <destFile>${sonar.jacoco.reportPath}</destFile>
         <append>true</append>
